--- a/main.css
+++ b/main.css
@@ -37,6 +37,10 @@ img {
     padding: 5px 0px;
     text-align: center;
 }
+/* Card Transition */
+.card:hover{
+    transform: scale(1.05);
+}
 /* Secciones Presentes en Todas las paginas */
 /* HEADER */
 header {
@@ -68,7 +72,11 @@ nav ul li a {
     text-transform: uppercase;
     border-bottom: 3px solid transparent;
 }
-
+/* Navbar Transition */
+nav ul li a:hover {
+    border-bottom: 3px solid #fcab31;
+    color: #fcab31;
+}
 .logo {
     width: 60px;
 }
@@ -88,6 +96,9 @@ footer {
 .socialLogo {
     height: 50px;
     padding: 10px 10px 10px 0 ;
+}
+.socialLogo:hover{
+    transform: scale(1.1);
 }
 
 /* Estilos de Paginas */
