--- a/main.css
+++ b/main.css
@@ -48,41 +48,7 @@ img {
 }
 /* Secciones Presentes en Todas las paginas */
 /* HEADER */
-header {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    background-color: rgba(38,42,53);
-
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-
-    z-index: 5;
-}
-nav ul{
-    list-style-type: none;
-
-    display: flex;
-    flex-direction: column;
-}
-nav ul li {
-    padding: 5px 10px;
-}
-nav ul li a {
-    text-decoration: none;
-    color: white;
-    text-transform: uppercase;
-    border-bottom: 3px solid transparent;
-}
-/* Navbar Transition */
-nav ul li a:hover {
-    border-bottom: 3px solid #fcab31;
-    color: #fcab31;
-}
-.logo {
+#logo{
     width: 60px;
 }
 /* FOOTER */
@@ -375,29 +341,6 @@ footer {
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out;
     animation-duration: .9s;
-}
-
-/* MEDIA QUERIES Presentes en todas las paginas*/
-/* NAVBAR */
-@media screen and (min-width: 768px) {
-    header {
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-
-        position: fixed;
-
-        padding-bottom: 0px;
-        height: 60px;
-    }
-    nav ul{
-        display: flex;
-        flex-direction: row;
-    }
-    /* Evito superposicion de navbar con contenido de la pagina: */
-    main {
-        padding-top: 70px;
-    }
 }
 /* MEDIA QUERIES  Separadas por paginas */
 /* INDEX */
