--- a/main.css
+++ b/main.css
@@ -48,13 +48,12 @@ img {
 }
 /* Secciones Presentes en Todas las paginas */
 /* HEADER */
-#logo{
-    width: 60px;
-}
-/* Navbar */
 #navbarNav > ul > li > a:hover{
     color:#fcab31;
     border-bottom: solid 1px #fcab31 ;
+}
+#logo{
+    width: 60px;
 }
 /* FOOTER */
 footer {
@@ -92,17 +91,13 @@ footer {
 .heroSection {
     grid-area: hero;
 
-    display: flex;
-    flex-flow: column;
-
     text-align: center;
-
-    padding: 5px;
 }
 .heroSection--txt {
     background-color: #fcab31;
-    padding: 5px;
 
+    padding: 0px 10px;
+    align-self: center;
     /* Animacion */
     animation-name: fade-in-left;
     animation-iteration-count: 1;
@@ -113,6 +108,8 @@ footer {
     text-align: justify;
 }
 .heroSection--img {
+    align-self: center;
+
     animation-name: fade-in-right;
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out;
@@ -335,7 +332,7 @@ footer {
 /* MEDIA QUERIES  Separadas por paginas */
 /* INDEX */
 @media screen and (min-width: 768px) {
-    .heroSection {
+    /* .heroSection {
         flex-flow: row;
         align-items: center;
         justify-content: center;
@@ -347,7 +344,7 @@ footer {
     }
     .logo {
         margin-left: 10px;
-    }
+    } */
 }
 @media screen and (min-width: 1024px) {
     /* ESTILO grid de index*/
