--- a/main.css
+++ b/main.css
@@ -7,45 +7,26 @@
 }
 /*Estilos Presentes en todas las paginas del sitio: */
 body {
-    background-color: rgb(226, 226, 226);
+    background-color: #FBFBFB;
     position: relative;
     min-height: 100vh;
 }
 main {
-    padding-bottom: 90px;
+    padding-bottom: 200px;
 }
 img {
     max-width: 100%;
 }
 /* Estilo Cards */
+.card-img-top {
+    max-width: 200px;
+    max-height: 200px;
+    }
 .card--img > img {
     width: 200px;
     height: 200px;
 }
-.card {
-    border-radius: 8px;
-    background-color: #fcab31;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    margin: 10px;
-    /* ANIMACIONES */
-    animation-name: fade-in;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in-out;
-    animation-duration: .9s;
-}
-.card .card--text, .card .card--precio {
-    text-transform: uppercase;
-    padding: 5px 0px;
-    text-align: center;
-}
-/* Card Transition */
-.card:hover{
-    transform: scale(1.05);
-}
 /* Secciones Presentes en Todas las paginas */
 /* HEADER */
 #navbarNav > ul > li > a:hover{
@@ -123,15 +104,7 @@ footer {
 
     text-align: center;
 }
-.destacados--grid{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,250px);
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
-    justify-content: center;
 
-    padding-bottom: 5px;
-}
 /* Extra Section */
 .seccionExtra{
     grid-area: extra;
@@ -145,7 +118,7 @@ footer {
     margin-bottom: 50px;
 }
 .ingredientes, .instrucciones {
-    text-align: justify;
+    text-align: left;
 }
 .ingredientes ul, .instrucciones ol {
     list-style-type: none;
@@ -331,21 +304,6 @@ footer {
 }
 /* MEDIA QUERIES  Separadas por paginas */
 /* INDEX */
-@media screen and (min-width: 768px) {
-    /* .heroSection {
-        flex-flow: row;
-        align-items: center;
-        justify-content: center;
-    }
-    .heroSection--txt {
-        max-width: 40vw;
-        padding: 10px;
-        margin-right: 10px;
-    }
-    .logo {
-        margin-left: 10px;
-    } */
-}
 @media screen and (min-width: 1024px) {
     /* ESTILO grid de index*/
     .index_main {
