--- a/main.css
+++ b/main.css
@@ -138,34 +138,9 @@ footer {
 /* Newsletter */
 .newsletter{
     grid-area: newsletter;
-
-    display: flex;
-    flex-flow: column;
-    text-align: center;
 }
-.newsletter--desc img{
-    height: 200px;
-    width: 200px;
-}
-.newsletter--form {
-    display: flex;
-    flex-flow: column;
-
-    align-items: center;
-}
-.newsletter--form .inputText {
-    border: 1px solid rgb(226, 226, 226);
-
-    width: 70%;
-    max-width: 300px;
-    border-radius: 2px;
-    margin-bottom: 5px;
-}
-.newsletter--form .button {
-    background-color: #fcab31;
-    border-color: #fcab31;
-    border-radius: 5px;
-    padding: 5px;
+.newsletter .form-floating{
+    max-width: 400px;
 }
 /* CONOCENOS */
 .imgBackgroundOne{
@@ -324,8 +299,6 @@ footer {
     }
     .newsletter {
         align-self: center;
-        justify-self: center;
-        padding-right: 50px;
     }
 }
 /* PRODUCTOS */
