--- a/main.css
+++ b/main.css
@@ -120,6 +120,11 @@ footer {
 /* Newsletter */
 .newsletter{
     grid-area: newsletter;
+    max-width: 550px;
+    padding: 30px 0;
+}
+.newsletter input {
+    min-width: 200px;
 }
 /* Section Negocios */
 .negocios{
@@ -279,8 +284,11 @@ footer {
         "newsletter newsletter"
         "negocios testimonios"
         ;
-        justify-content:center;
 
+        justify-content:center;
+    }
+    .newsletter input {
+        min-width: 300px;
     }
     .negocios{
         max-width: 500px;
