--- a/main.css
+++ b/main.css
@@ -56,6 +56,12 @@ footer a {
     text-decoration: none;
     color: white;
 }
+.bi {
+    font-size: 1.5em;
+}
+.bi-facebook, .bi-instagram {
+    font-size: 2em;
+}
 /* Estilos de Paginas */
 /* INDEX */
 /* Estilo grid de index */
