--- a/main.css
+++ b/main.css
@@ -45,6 +45,9 @@ img {
 #logo{
     width: 60px;
 }
+.bi-person-fill, .bi-cart {
+    font-size: medium !important;
+}
 /* FOOTER */
 footer ul{
     list-style-type: none;
