Cards servicios text size

--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ img {
 .card-text{
     width: 200px;
     text-align: center;
+    font-size: medium !important;
 }
 .card {
     background-color: #fcab31;
