--- a/main.css
+++ b/main.css
@@ -31,6 +31,9 @@ img {
 .card p {
     font-size: larger;
 }
+.card:hover{
+    transform: scale(1.05);
+}
 /* Color Botones */
 .btn-primary {
     background-color: #941e02;
@@ -109,22 +112,12 @@ footer a {
 
     padding: 0px 10px;
     align-self: center;
-    /* Animacion */
-    animation-name: fade-in-left;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in-out;
-    animation-duration: .9s;
 }
 .heroSection--txt p {
     text-align: justify;
 }
 .heroSection--img {
     align-self: center;
-
-    animation-name: fade-in-right;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in-out;
-    animation-duration: .9s;
 }
 
 /* Productos Destacados Section */
@@ -289,12 +282,6 @@ footer a {
 }
 .googleMap {
     grid-area: googleMap;
-
-    /* ANIMACIONES */
-    animation-name: fade-in;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in-out;
-    animation-duration: .9s;
 }
 
 /* MEDIA QUERIES  Separadas por paginas */
@@ -353,32 +340,63 @@ footer a {
         grid-column-gap: 10px;
     }
 }
+
 /* ANIMACIONES */
-@keyframes fade-in-left {
-    0%{
-        transform: translate(-300px);
-        opacity: 0;
-    }
-    100%{
-        transform: translate(0px, 0px);
-    }
+/* shake */
+.shake {
+    animation: shake 1s ease 1;
 }
-@keyframes fade-in-right {
-    0%{
-        transform: translate(300px);
-        opacity: 0;
+
+@keyframes shake {
+
+    0%,
+    100% {
+        transform: translateX(0);
     }
-    100%{
-        transform: translate(0px, 0px);
-        opacity: 1;
+
+    15%,
+    45%,
+    75% {
+        transform: translateX(-3px);
     }
-}
-@keyframes fade-in {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
+
+    30%,
+    60%,
+    90% {
+        transform: translateX(3px);
     }
 }
 
+/* fade in top*/
+.fadeInTop {
+    animation: fadeInTop 1s ease 1;
+}
+
+@keyframes fadeInTop {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -20%, 0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+/* fade in bottom*/
+.fadeInBottom {
+    animation: fadeInBottom 1s ease 1;
+}
+
+@keyframes fadeInBottom {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, 20%, 0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
