Footer text align

--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,9 @@ footer {
   .newsletter input {
     min-width: 200px; }
 
+.tutorias {
+  align-self: center; }
+
 .negocios .carousel-caption {
   top: 0; }
 
