--- a/scss/global/_mediaqueries.scss
+++ b/scss/global/_mediaqueries.scss
@@ -31,6 +31,11 @@
         align-items: center;
     }
 
+    //PAGINA SERVICIOS
+    .serviciosDescripcion {
+        max-width: 70vw;
+        margin: auto;
+    }
     //PAGINA CONTACTO
     .contacto_main {
         grid-template-areas: 
