--- a/scss/global/_core.scss
+++ b/scss/global/_core.scss
@@ -11,11 +11,41 @@ $color-dark: #000;
 
 // Fuentes
 $font-header: "Anybody", Helvetica, sans-serif;
-$font-text: Georgia, serif;
+$font-text: Verdana, serif;
 
 // Media Queries Width
 $laptop: 768px;
 $desktop: 1024px;
 
+h1,h2,h3,h4,h5,h6{
+    font-family: $font-header;
+}
+p {
+    font-family: $font-text;
+}
+a {
+    font-family: $font-header;
+}
+h1 {
+    font-size: 2.5rem;
+}
+h2{
+    font-size: 2rem;
+}
+h3{
+    font-size: 1.7rem;
+}
+h4{
+    font-size: 1.6rem;
+}
+h5 {
+    font-size: 1.5rem;
+}
+h6 {
+    font-size: 1.2rem;
+}
+p {
+    font-size: 1.1rem;
+}
 
 
