--- a/scss/pages/_conocenos.scss
+++ b/scss/pages/_conocenos.scss
@@ -14,10 +14,9 @@
         position: relative;
     }
     .textoSobreImagen {
-        color:rgb(255, 255, 255);
-        font-size: 1.5em;
+        color: $color-bright;
         position: absolute;
-        text-shadow: 2px 2px #5c3d13;
+        text-shadow: 2px 2px #000000;
         
         width: 100%;
         text-align: center;
