--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,7 +4,7 @@
     text-align: center;
 
     .heroSection--txt {
-        background-color: #fcab31;
+        background-color: $color-primary;
         padding: 0px 10px;
         align-self: center;
 
