--- a/css/main.css
+++ b/css/main.css
@@ -128,8 +128,7 @@ footer {
     color: #FFF;
     text-decoration: none; }
     footer a:hover {
-      color: #fcab31 !important;
-      border-bottom: solid 1px #fcab31; }
+      color: #fcab31 !important; }
 
 .card {
   background-color: #fcab31;
@@ -154,11 +153,12 @@ footer {
 
 .bi-facebook, .bi-instagram {
   font-size: 2em; }
+  .bi-facebook:hover, .bi-instagram:hover {
+    color: #fcab31; }
 
 .bi-person-fill, .bi-cart {
   font-size: 1.3rem !important; }
 
-/* Color Botones */
 .btn-primary {
   background-color: #0f2535;
   border: 1px solid #0f2535; }
@@ -233,7 +233,7 @@ footer {
   .historia .textoSobreImagen, .premios .textoSobreImagen {
     color: #FFF;
     position: absolute;
-    text-shadow: 2px 2px #000000;
+    text-shadow: 2px 2px #000;
     width: 100%;
     text-align: center;
     top: 30%; }
