--- a/scss/pages/_conocenos.scss
+++ b/scss/pages/_conocenos.scss
@@ -16,7 +16,7 @@
     .textoSobreImagen {
         color: $color-bright;
         position: absolute;
-        text-shadow: 2px 2px #000000;
+        text-shadow: 2px 2px $color-dark;
         
         width: 100%;
         text-align: center;
