--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -23,6 +23,9 @@ footer {
             color: $color-primary !important;
         }
     }
+    h6 {
+        color: $color-bright !important;
+    }
 }
 
 // CARDS
