--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -11,4 +11,9 @@
             text-align: justify;
         }
     }
+    .formulario {
+        h2 {
+            color: $color-bright;
+        }
+    }
 }
