--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,12 @@ img {
   max-width: 100%; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Anybody", Helvetica, sans-serif; }
+  font-family: "Anybody", Helvetica, sans-serif;
+  color: #000; }
 
 p {
-  font-family: Verdana, serif; }
+  font-family: Verdana, serif;
+  color: #000; }
 
 a {
   font-family: "Anybody", Helvetica, sans-serif; }
@@ -129,6 +131,8 @@ footer {
     text-decoration: none; }
     footer a:hover {
       color: #fcab31 !important; }
+  footer h6 {
+    color: #FFF !important; }
 
 .card {
   background-color: #fcab31;
@@ -276,6 +280,8 @@ footer {
   text-align: center; }
   .contacto_main .horariosContacto ul {
     text-align: justify; }
+  .contacto_main .formulario h2 {
+    color: #FFF; }
 
 @media screen and (min-width: 768px) {
   .index_main {
