Fix ul, blockquote text color

--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,6 +1,6 @@
 /* CONTACTO */
 .contacto_main {
-
+    color: $color-dark;
     align-items: center;
     justify-content: center;
     justify-items: center;
