--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -46,6 +46,7 @@
 
 // SECTION TESTIMONIOS
 .testimonios {
+    color: $color-dark;
     .item {
         display: flex;
         flex-direction: column;
