--- a/css/main.css
+++ b/css/main.css
@@ -207,22 +207,23 @@ footer {
 .negocios .carousel-caption {
   top: 0; }
 
-.testimonios .item {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  text-align: center;
-  max-width: 500px; }
-
-.testimonios .item-img {
-  margin: 0 auto;
-  width: 200px;
-  height: 200px; }
-
-.testimonios .item-txt {
-  font-style: italic; }
+.testimonios {
+  color: #000; }
+  .testimonios .item {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 500px; }
+  .testimonios .item-img {
+    margin: 0 auto;
+    width: 200px;
+    height: 200px; }
+  .testimonios .item-txt {
+    font-style: italic; }
 
 .historia, .premios {
+  color: #000;
   padding: 10px;
   text-align: center; }
   .historia .parallax, .premios .parallax {
@@ -273,6 +274,7 @@ footer {
 
 /* CONTACTO */
 .contacto_main {
+  color: #000;
   align-items: center;
   justify-content: center;
   justify-items: center;
