--- a/scss/global/_core.scss
+++ b/scss/global/_core.scss
@@ -15,8 +15,8 @@ $font-header: "Anybody", Helvetica, sans-serif;
 $font-text: Verdana, serif;
 
 // Media Queries Width
-$laptop: 768px;
-$desktop: 1024px;
+$tablet: 768px;
+$laptop: 1024px;
 
 // Font Family -  Font Size
 h1,h2,h3,h4,h5,h6{
