--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -2,8 +2,8 @@
 // SECTION HERO
 .heroSection {
     margin-top: -1rem;
-    min-height: calc(100vh - 91px);
-    // min-height: 100vh;
+    // min-height: calc(100vh - 91px);
+    min-height: 100vh;
     
     display: flex;
     flex-direction: column;
