--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -7,16 +7,16 @@
     
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     
-    background: linear-gradient(180deg,#0009,#0002, #0000), url("./../public/colmenas.jpg");
+    background: linear-gradient(180deg,#0009,#0002, #0009), url("./../public/colmenas.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
     .hero--txtBackground{
+        
         padding: 1rem;
-
         background: rgb(0,0,0);
         background: linear-gradient(360deg, rgba(0,0,0,0.03) 0%, rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.03) 100%);
         .heroSection--txt {
@@ -29,6 +29,11 @@
             }
             
         }
+    }
+    .benefits {
+        color: $color-bright;
+        font-size: 1.5rem;
+        padding: 1rem;
     }
 }
 
