--- a/scss/global/_mediaqueries.scss
+++ b/scss/global/_mediaqueries.scss
@@ -31,6 +31,7 @@
     .heroSection {
         // hero section bajo header
         margin-top: -6.7rem;
+        min-height: 100vh;
         p {
             max-width: 40vw;
         }
