--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,8 +4,8 @@
     margin-top: -1rem;
     min-height: 90vh;
     
-    display: flex;
-    flex-direction: column;
+    @extend .display-flex-column;
+
     justify-content: flex-end;
     
     background: linear-gradient(180deg,#0009,#0002, #0009), url("./../public/colmenas.jpg");
@@ -66,8 +66,6 @@
 .testimonios {
     color: $color-dark;
     .item {
-        display: flex;
-        flex-direction: column;
         margin: 0 auto;
         text-align: center;
         max-width: 500px;
